PL/src/Pr4/AST/JavaCC/ConstructorAST.java
/* Generated By:JavaCC: Do not edit this line. ConstructorAST.java */
package Pr4.AST.JavaCC;

import Pr4.AST.SemOps;
import Pr4.AST.TinyASint.*;

public class ConstructorAST implements ConstructorASTConstants {
   private SemOps sem = new SemOps();

  final public Prog ProgramaP() throws ParseException {
                      Prog prog;
    prog = Programa();
    jj_consume_token(0);
                                                          {if (true) return prog;}
    throw new Error("Missing return statement in function");
  }

  final public Prog Programa() throws ParseException {
                     Decs decs; Insts insts;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case proc:
    case var:
    case type:
      decs = Declaraciones();
      jj_consume_token(42);
      insts = Instrucciones();
                                                                                  {if (true) return sem.prog_con_decs(decs, insts);}
      break;
    case NumInt:
    case NumReal:
    case not:
    case Null:
    case If:
    case True:
    case While:
    case call:
    case False:
    case New:
    case delete:
    case read:
    case write:
    case nl:
    case Id:
    case cadena:
    case 44:
    case 47:
    case 54:
    case 57:
      insts = Instrucciones();
                                                       {if (true) return sem.prog_sin_decs(insts);}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Decs Declaraciones() throws ParseException {
                         Dec dec; Decs decs;
    dec = Declaracion();
    decs = RD(sem.decs_una(dec));
                                                                               {if (true) return decs;}
    throw new Error("Missing return statement in function");
  }

  final public Decs RD(Decs decsh) throws ParseException {
                         Dec dec; Decs decs;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
      dec = Declaracion();
      decs = RD(sem.decs_muchas(decsh, dec));
                                                                 {if (true) return decs;}
      break;
    default:
      jj_la1[1] = jj_gen;
     {if (true) return decsh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Dec Declaracion() throws ParseException {
                      Dec dec;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case var:
      dec = DeclaracionVar();
                            {if (true) return dec;}
      break;
    case type:
      dec = DeclaracionTipo();
                           {if (true) return dec;}
      break;
    case proc:
      dec = DeclaracionProc();
                           {if (true) return dec;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Dec DeclaracionVar() throws ParseException {
                          Tipo tipo; Token id;
    jj_consume_token(var);
    tipo = Tipo();
    id = jj_consume_token(Id);
                                {if (true) return sem.dec_var(tipo, sem.str(id.image, id.beginLine, id.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Dec DeclaracionTipo() throws ParseException {
                          Tipo tipo; Token id;
    jj_consume_token(type);
    tipo = Tipo();
    id = jj_consume_token(Id);
                                     {if (true) return sem.dec_tipo(tipo, sem.str(id.image, id.beginLine, id.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Dec DeclaracionProc() throws ParseException {
                          Token id; ParamsF params; Bloque bloque;
    jj_consume_token(proc);
    id = jj_consume_token(Id);
    params = ParametrosFormales();
    bloque = Bloque();
                                                                     {if (true) return sem.dec_proc(sem.str(id.image, id.beginLine, id.beginColumn), params, bloque);}
    throw new Error("Missing return statement in function");
  }

  final public ParamsF ParametrosFormales() throws ParseException {
                                 ParamsF params;
    jj_consume_token(44);
    params = RPF();
                           {if (true) return params;}
    throw new Error("Missing return statement in function");
  }

  final public ParamsF RPF() throws ParseException {
                   ParamsF params;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case string:
    case record:
    case Int:
    case real:
    case bool:
    case array:
    case pointer:
    case Id:
      params = Parametros();
      jj_consume_token(45);
                                  {if (true) return params;}
      break;
    case 45:
      jj_consume_token(45);
         {if (true) return sem.params_ninguno();}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ParamsF Parametros() throws ParseException {
                         ParamF param; ParamsF params;
    param = Parametro();
    params = RPs(sem.params_uno_f(param));
                                                                {if (true) return params;}
    throw new Error("Missing return statement in function");
  }

  final public ParamsF RPs(ParamsF paramsh) throws ParseException {
                                  ParamF param; ParamsF params;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
      param = Parametro();
      params = RPs(sem.params_muchos_f(paramsh, param));
                                                                                {if (true) return params;}
      break;
    default:
      jj_la1[4] = jj_gen;
     {if (true) return paramsh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public ParamF Parametro() throws ParseException {
                       Tipo tipo;
    tipo = Tipo();
                  {if (true) return RP(tipo);}
    throw new Error("Missing return statement in function");
  }

  final public ParamF RP(Tipo tipo) throws ParseException {
                          Token id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      id = jj_consume_token(Id);
                  {if (true) return sem.param_f_con_amp(tipo, sem.str(id.image, id.beginLine, id.beginColumn));}
      break;
    case Id:
      id = jj_consume_token(Id);
             {if (true) return sem.param_f_sin_amp(tipo, sem.str(id.image, id.beginLine, id.beginColumn));}
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Bloque Bloque() throws ParseException {
                    Bloque prog;
    jj_consume_token(47);
    prog = ProgramaAux();
    jj_consume_token(48);
                                 {if (true) return prog;}
    throw new Error("Missing return statement in function");
  }

  final public Bloque ProgramaAux() throws ParseException {
                         Prog prog;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NumInt:
    case NumReal:
    case not:
    case Null:
    case proc:
    case If:
    case True:
    case While:
    case call:
    case False:
    case New:
    case delete:
    case read:
    case write:
    case nl:
    case var:
    case type:
    case Id:
    case cadena:
    case 44:
    case 47:
    case 54:
    case 57:
      prog = Programa();
                      {if (true) return sem.bloque_lleno(prog);}
      break;
    default:
      jj_la1[6] = jj_gen;
     {if (true) return sem.bloque_vacio();}
    }
    throw new Error("Missing return statement in function");
  }

  final public Tipo Tipo() throws ParseException {
                Tipo tipo; Token num, id, entero, Real, booleano, str; Campos campos;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      id = jj_consume_token(Id);
              {if (true) return sem.tipo_id(sem.str(id.image, id.beginLine, id.beginColumn));}
      break;
    case Int:
      jj_consume_token(Int);
           {if (true) return sem.t_int();}
      break;
    case real:
      jj_consume_token(real);
             {if (true) return sem.t_real();}
      break;
    case bool:
      jj_consume_token(bool);
             {if (true) return sem.t_bool();}
      break;
    case string:
      jj_consume_token(string);
               {if (true) return sem.t_cadena();}
      break;
    case array:
      jj_consume_token(array);
      jj_consume_token(49);
      num = jj_consume_token(NumInt);
      jj_consume_token(50);
      jj_consume_token(of);
      tipo = Tipo();
                                                   {if (true) return sem.tipo_array(sem.str(num.image, num.beginLine, num.beginColumn), tipo);}
      break;
    case record:
      jj_consume_token(record);
      jj_consume_token(47);
      campos = Campos();
      jj_consume_token(48);
                                      {if (true) return sem.tipo_registro(campos);}
      break;
    case pointer:
      jj_consume_token(pointer);
      tipo = Tipo();
                           {if (true) return sem.tipo_puntero(tipo);}
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Campos Campos() throws ParseException {
                    Campo campo; Campos campos;
    campo = Campo();
    campos = RC(sem.campos_uno(campo));
                                                     {if (true) return campos;}
    throw new Error("Missing return statement in function");
  }

  final public Campos RC(Campos camposh) throws ParseException {
                               Campo campo; Campos campos;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
      campo = Campo();
      campos = RC(sem.campos_muchos(camposh, campo));
                                                                     {if (true) return campos;}
      break;
    default:
      jj_la1[8] = jj_gen;
     {if (true) return camposh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Campo Campo() throws ParseException {
                   Tipo tipo; Token id;
    tipo = Tipo();
    id = jj_consume_token(Id);
                          {if (true) return sem.campo(tipo, sem.str(id.image, id.beginLine, id.beginColumn));}
    throw new Error("Missing return statement in function");
  }

  final public Insts Instrucciones() throws ParseException {
                           Inst inst; Insts insts;
    inst = Instruccion();
    insts = RI(sem.insts_una(inst));
                                                       {if (true) return insts;}
    throw new Error("Missing return statement in function");
  }

  final public Insts RI(Insts instsh) throws ParseException {
                            Inst inst; Insts insts;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      jj_consume_token(43);
      inst = Instruccion();
      insts = RI(sem.insts_muchas(instsh, inst));
                                                                      {if (true) return insts;}
      break;
    default:
      jj_la1[9] = jj_gen;
     {if (true) return instsh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Inst Instruccion() throws ParseException {
                       Inst inst; Bloque bloque;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NumInt:
    case NumReal:
    case not:
    case Null:
    case True:
    case False:
    case Id:
    case cadena:
    case 44:
    case 54:
    case 57:
      inst = InstrAsig();
                       {if (true) return inst;}
      break;
    case If:
      inst = InstrIfThen();
                        {if (true) return inst;}
      break;
    case While:
      inst = InstrWhile();
                       {if (true) return inst;}
      break;
    case read:
      inst = InstrLectura();
                         {if (true) return inst;}
      break;
    case write:
      inst = InstrEscritura();
                           {if (true) return inst;}
      break;
    case nl:
      inst = InstrNewLine();
                         {if (true) return inst;}
      break;
    case New:
      inst = InstrReservMem();
                           {if (true) return inst;}
      break;
    case delete:
      inst = InstrLibMem();
                        {if (true) return inst;}
      break;
    case call:
      inst = InstrInvocProc();
                           {if (true) return inst;}
      break;
    case 47:
      bloque = Bloque();
                     {if (true) return sem.inst_comp(bloque);}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Inst InstrAsig() throws ParseException {
                     Exp arg0; Exp arg1;
    arg0 = E0();
    jj_consume_token(51);
    arg1 = E0();
                                  {if (true) return sem.inst_asig(arg0, arg1);}
    throw new Error("Missing return statement in function");
  }

  final public Insts BloqueOpcional() throws ParseException {
                           Insts insts;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NumInt:
    case NumReal:
    case not:
    case Null:
    case If:
    case True:
    case While:
    case call:
    case False:
    case New:
    case delete:
    case read:
    case write:
    case nl:
    case Id:
    case cadena:
    case 44:
    case 47:
    case 54:
    case 57:
      insts = Instrucciones();
                            {if (true) return insts;}
      break;
    default:
      jj_la1[11] = jj_gen;
     {if (true) return sem.insts_ninguna();}
    }
    throw new Error("Missing return statement in function");
  }

  final public Inst InstrIfThen() throws ParseException {
                       Exp exp; Insts insts; Inst inst;
    jj_consume_token(If);
    exp = E0();
    jj_consume_token(then);
    insts = BloqueOpcional();
    inst = RIT(exp, insts);
                                                                       {if (true) return inst;}
    throw new Error("Missing return statement in function");
  }

  final public Inst RIT(Exp exph, Insts insth) throws ParseException {
                                     Insts insts;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Else:
      jj_consume_token(Else);
      insts = BloqueOpcional();
      jj_consume_token(endif);
                                            {if (true) return sem.inst_ifthenelse(exph, insth, insts);}
      break;
    case endif:
      jj_consume_token(endif);
             {if (true) return sem.inst_ifthen(exph, insth);}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Inst InstrWhile() throws ParseException {
                      Exp exp; Insts insts;
    jj_consume_token(While);
    exp = E0();
    jj_consume_token(Do);
    insts = BloqueOpcional();
    jj_consume_token(endwhile);
                                                              {if (true) return sem.inst_while(exp, insts);}
    throw new Error("Missing return statement in function");
  }

  final public Inst InstrLectura() throws ParseException {
                        Exp exp;
    jj_consume_token(read);
    exp = E0();
                      {if (true) return sem.inst_lectura(exp);}
    throw new Error("Missing return statement in function");
  }

  final public Inst InstrEscritura() throws ParseException {
                          Exp exp;
    jj_consume_token(write);
    exp = E0();
                       {if (true) return sem.inst_escritura(exp);}
    throw new Error("Missing return statement in function");
  }

  final public Inst InstrNewLine() throws ParseException {
                        Exp exp;
    jj_consume_token(nl);
           {if (true) return sem.inst_new_line();}
    throw new Error("Missing return statement in function");
  }

  final public Inst InstrReservMem() throws ParseException {
                          Exp exp;
    jj_consume_token(New);
    exp = E0();
                     {if (true) return sem.inst_reserv_mem(exp);}
    throw new Error("Missing return statement in function");
  }

  final public Inst InstrLibMem() throws ParseException {
                       Exp exp;
    jj_consume_token(delete);
    exp = E0();
                        {if (true) return sem.inst_lib_mem(exp);}
    throw new Error("Missing return statement in function");
  }

  final public Inst InstrInvocProc() throws ParseException {
                          Token id; Expresiones exps;
    jj_consume_token(call);
    id = jj_consume_token(Id);
    jj_consume_token(44);
    exps = ListaExpresiones();
    jj_consume_token(45);
                                                     {if (true) return sem.inst_invoc_proc(sem.str(id.image, id.beginLine, id.beginColumn), exps);}
    throw new Error("Missing return statement in function");
  }

  final public Expresiones ListaExpresiones() throws ParseException {
                                   Expresiones exps;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NumInt:
    case NumReal:
    case not:
    case Null:
    case True:
    case False:
    case Id:
    case cadena:
    case 44:
    case 54:
    case 57:
      exps = Expresiones();
                         {if (true) return exps;}
      break;
    default:
      jj_la1[13] = jj_gen;
     {if (true) return sem.exprs_ninguna();}
    }
    throw new Error("Missing return statement in function");
  }

  final public Expresiones Expresiones() throws ParseException {
                              Expresiones exps; Exp exp;
    exp = E0();
    exps = RE(sem.exprs_una(exp));
                                           {if (true) return exps;}
    throw new Error("Missing return statement in function");
  }

  final public Expresiones RE(Expresiones expsh) throws ParseException {
                                       Exp exp; Expresiones exps;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 52:
      jj_consume_token(52);
      exp = E0();
      exps = RE(sem.exprs_muchas(expsh, exp));
                                                         {if (true) return exps;}
      break;
    default:
      jj_la1[14] = jj_gen;
     {if (true) return expsh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E0() throws ParseException {
             Exp arg0, resul;
    arg0 = E1();
    resul = RE0(arg0);
                                {if (true) return resul;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RE0(Exp argh) throws ParseException {
                      Exp arg1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 53:
      jj_consume_token(53);
      arg1 = E0();
                    {if (true) return sem.exp("+", argh, arg1);}
      break;
    case 54:
      jj_consume_token(54);
      arg1 = E1();
                   {if (true) return sem.exp("-", argh, arg1);}
      break;
    default:
      jj_la1[15] = jj_gen;
     {if (true) return argh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E1() throws ParseException {
             Exp arg0, resul;
    arg0 = E2();
    resul = RE1(arg0);
                                {if (true) return resul;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RE1(Exp exph) throws ParseException {
                      String op; Exp arg1; Exp exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case and:
    case or:
      op = OP1();
      arg1 = E2();
      exp = RE1(sem.exp(op, exph, arg1));
                                                          {if (true) return exp;}
      break;
    default:
      jj_la1[16] = jj_gen;
     {if (true) return exph;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E2() throws ParseException {
             Exp arg0, resul;
    arg0 = E3();
    resul = RE2(arg0);
                                {if (true) return resul;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RE2(Exp exph) throws ParseException {
                      String op; Exp arg1; Exp exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 58:
    case 59:
    case 60:
    case 61:
    case 62:
    case 63:
      op = OP2();
      arg1 = E3();
      exp = RE2(sem.exp(op, exph, arg1));
                                                          {if (true) return exp;}
      break;
    default:
      jj_la1[17] = jj_gen;
     {if (true) return exph;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E3() throws ParseException {
             Exp arg0, resul;
    arg0 = E4();
    resul = RE3(arg0);
                                {if (true) return resul;}
    throw new Error("Missing return statement in function");
  }

  final public Exp RE3(Exp argh) throws ParseException {
                       String op; Exp arg1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 57:
    case 64:
    case 65:
      op = OP3();
      arg1 = E4();
                         {if (true) return sem.exp(op, argh, arg1);}
      break;
    default:
      jj_la1[18] = jj_gen;
     {if (true) return argh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E4() throws ParseException {
             Exp exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 54:
      jj_consume_token(54);
      exp = E5();
                   {if (true) return sem.exp("-", exp);}
      break;
    case not:
      jj_consume_token(not);
      exp = E4();
                    {if (true) return sem.exp("not", exp);}
      break;
    case NumInt:
    case NumReal:
    case Null:
    case True:
    case False:
    case Id:
    case cadena:
    case 44:
    case 57:
      exp = E5();
              {if (true) return exp;}
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp E5() throws ParseException {
             Exp arg0, resul;
    arg0 = E6();
    resul = RE5(arg0);
                                {if (true) return resul;}
    throw new Error("Missing return statement in function");
  }
